add [Posts] CheatSheet Post & Markdown

--- a/_posts/Posts/2023-04-21-Markdown.md
+++ b/_posts/Posts/2023-04-21-Markdown.md
@@ -3,6 +3,7 @@ title: Markdown Post
 date: 2023-04-21 04:35:00 +/-0300
 categories: [Blog, Post]
 tags: [markdown] # TAG names should always be lowercase
+img_path: /assets/images_posts/
 ---
 
 # Basic Syntax
@@ -76,7 +77,7 @@ tags: [markdown] # TAG names should always be lowercase
 ## Image
 
 \!\[alt text](image.jpg)  
-![alt](path)
+![alt](FrRqTx0aEAAnUcU.jpeg)
 
 ---
 
