fix 2023-04-21-Markdown.md [Footnot and Tasklist]

--- a/_posts/Posts/2023-04-21-Markdown.md
+++ b/_posts/Posts/2023-04-21-Markdown.md
@@ -119,8 +119,9 @@ Here's a sentence with a footnote. \[^1]
 \[^1]: This is the footnote.
 
 Here's a sentence with a footnote. [^1]
+[^1]: This is the footnote.
 
-## [^1]: This is the footnote.
+---
 
 ## Definition List
 
@@ -141,10 +142,10 @@ term
 
 ## Task List
 
-- [x] Write the press release
-- [ ] Learning Markdown
-- [ ] Writing Markdown
-
 \- [x] Write the press release  
 \- [ ] Learning Markdown  
 \- [ ] Writing Markdown
+
+- [x] Write the press release
+- [ ] Learning Markdown
+- [ ] Writing Markdown
